Prevent code blocks from not wrapping text.

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -121,6 +121,10 @@ sub {
   vertical-align: sub;
 }
 
+pre {
+  white-space: pre-wrap;
+}
+
 #page {
   margin: 0 auto;
   width: $page-width;
@@ -341,7 +345,7 @@ ul.dsq-widget-list {
 
     p {
       padding: 0;
-      font-size:100%;
+      font-size: 100%;
     }
   }
 }
